--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,11 @@ addons:
       description: "Build submitted via Travis CI"
     build_command:   "make"
     branch_pattern: coverity_scan
+    
+script:
+  - if [[ "${COVERITY_SCAN_BRANCH}" == 1 ]];
+      then
+        echo "Don't build on coverty_scan branch.";
+        exit 0;
+    fi
+  - make
